Add a rebroadcast demo page.
This just updates the html and javascript, copied over from the recordplay demo page. Just using this as a starting point.

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -23,6 +23,7 @@
 					<li><a href="textroomtest.html">Text Room</a></li>
 					<li><a href="voicemailtest.html">Voice Mail</a></li>
 					<li><a href="recordplaytest.html">Recorder/Playout</a></li>
+					<li><a href="rebroadcasttest.html">Rebroadcast</a></li>
 					<li><a href="screensharingtest.html">Screen Sharing</a></li>
 					<li class="divider"></li>
 					<li><a href="devicetest.html">Device Selection</a></li>
