--- a/html/demos.html
+++ b/html/demos.html
@@ -72,6 +72,10 @@
 					<td><a href="recordplaytest.html">Recorder/Playout</a></td>
 					<td>A demo to record audio/video messages, and subsequently replay them through WebRTC.</td>
 				</tr>
+                <tr class="active">
+					<td><a href="rebroadcasttest.html">Rebroadcast</a></td>
+					<td>A demo to rebroadcast WebRTC over RTMP.</td>
+				</tr>
 				<tr>
 					<td><a href="screensharingtest.html">Screen Sharing</a></td>
 					<td>A webinar-like screen sharing session, based on the Video Room plugin.</td>
