Updated rebroadcast demo page

--- a/html/rebroadcasttest.html
+++ b/html/rebroadcasttest.html
@@ -16,7 +16,7 @@
 	$(function() {
 		$(".navbar-static-top").load("navbar.html", function() {
 			$(".navbar-static-top li.dropdown").addClass("active");
-			$(".navbar-static-top a[href='recordplaytest.html']").parent().addClass("active");
+			$(".navbar-static-top a[href='rebroadcasttest.html']").parent().addClass("active");
 		});
 		$(".footer").load("footer.html");
 	});
@@ -49,7 +49,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container hide" id="recordplay">
+			<div class="container hide" id="rebroadcast">
 				<div id="demo">
 					<div class="col-md-6" id="controls">
 						<div class="panel panel-default">
